2002-08-03 Baptiste Lepilleur <gaiacrtn@free.fr>

  * include/cppunit/Exception.h:
  * src/cppunit/Exception.h: added setMessage().

  * include/cppunit/Protector.h:
  * src/cppunit/Protector.cpp: added class ProtectorGuard. Change the
    reportXXX() method to support Exception passing and SourceLine.

  * include/cppunit/TestCaller.h: removed 'expect exception' features.
    It is now handled by ExceptionTestCaseDecorator and TestCaller no
    longer need default template argument support.

  * include/cppunit/TestCase.h:
  * include/cppunit/extensions/TestCaller.h: runTest() is now public
    instead of protected, so that it can be decorated.

  * include/cppunit/TestResult.h:
  * src/cppunit/TestResult.h: added pushProtector() and popProtector()
    methods. This allow user to specify their own exception trap when
    running test case.

  * include/cppunit/extensions/TestDecorator.h:
  * src/cppunit/TestDecorator.cpp: added. Extracted from TestDecorator.h.
    The test passed to the constructor is now owned by the decorator.

  * include/cppunit/extensions/TestCaseDecorator.h:
  * src/cppunit/TestCaseDecorator.cpp: added. Decorator for TestCase
    setUp(), tearDown() and runTest().

  * include/cppunit/extensions/ExceptionTestCaseDecorator.h: added. 
    TestCaseDecorator to expect that a specific exception is thrown.

  * include/cppunit/extensions/HelperMacros.h: updated against TestCaller
    change.

  * src/cppunit/DefaultFunctor.h: fixed bug (did not return underlying
    test return code).

  * src/cppunit/ProtectorChain.cpp: fixed bug in chaing return code.

  * src/cppunit/DefaultFunctor.h: fixed bug.

  * src/msvc6/testrunner/ActiveTest.h:
  * src/msvc6/testrunner/ActiveTest.cpp: updated against 
    TestCaseDecorator ownership policy change. Moved inline functions
    to .cpp.

  * examples/cppunittest/TestSetUpTest.cpp: updated to use MockTestCase
    and against the new ownership policy.

  * examples/cppunittest/TestDecoratorTest.cpp: